--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Antuan Brown Resume</title>
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div>
+  <div class="exp-header">
     <h2>Antuan D. L. Brown</h2>
+  </div>
   <p>Minneapolis, MN │ linkedin.com/in/antuan-brown
       </div>
 
-    <div>
-      <h3>SUMMARY</h3>      
+    <div class="exp-header">
+      <h3>SUMMARY</h3> 
+  </div>
   <p>Ambitious information technology student currently completing CompTIA certifications and pursuing real-world 
 experience to develop acquired skills. Offering a strong understanding of device configuration, networking 
 protocols, and operations system specifications. Proficient in CRM platforms and eager to learn new processes, 
