--- a/index.html
+++ b/index.html
@@ -40,24 +40,21 @@ Expert │ Strategic Decision Making │ Web Support │ IT Security
   <h3>CERTIFICATIONS</h3>
     </div>
     <div>
-      <h4>CompTIA Network+</h4>
-      <h4>Expected 02/23</h4>
+      <h4>CompTIA Network+ Expected 02/23</h4>
       <ul>
         <li>Concepts: Network Concepts/Design/Implementation, Infrastructure, Operations, Security, and 
 Troubleshooting/Tools </li>
                 </ul
 
         <h4></h4>
-      <h4>CompTIA A+</h4>
-      <h4>Certified 01/23</h4>
+      <h4>CompTIA A+ Certified 01/23</h4>
       <ul>
         <li>Concepts: Mobile Devices, Networking Technology/Troubleshooting, Hardware Differences 
 Hardware/Virtualization/Cloud Computing, Operating Systems Installations/Configurations, Cybersecurity, 
 Software Troubleshooting, and Operational Procedures</li>
         </ul
         <h4></h4>
-      <h4>CompTIA IT Fundamentals (ITF+)</h4>
-      <h4>Certified 08/22</h4>
+      <h4>CompTIA IT Fundamentals (ITF+) Certified 08/22</h4>
       <ul>
         <li>Concepts: IT Concepts/Terminology/Infrastructure, Database Fundamentals, Operating Systems 
 Features/Functions, Network Connectivity, Software Applications/Purposes, End-user Security, and Web 
