--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <div class="exp-header">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 200px;
+}
+</style>
+</head>
+<body>
+
+<img src="https://media.licdn.com/dms/image/C4E03AQEjj51gZEUufg/profile-displayphoto-shrink_800_800/0/1617552089066?e=1678924800&amp;v=beta&amp;t=czxsLDik2SbQkvNmVdCmgqu8oamioqbw2RPVAMYEJUg">
+
+</body>
+</html>
+
+
     <h2>Antuan D. L. Brown</h2>
   </div>
   <p>Minneapolis, MN │ linkedin.com/in/antuan-brown
