--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ approach</li>
       <h4>October 2016 – July 2019</h4>
       
       <ul>
-        <li>Assisted in the development and implementation of academic initiatives and first-ear experience 
+        <li>Assisted in the development and implementation of academic initiatives and first-year experience 
 programming in University Housing for 1500+ students</li>
         <li>Created and maintained a monthly e-newsletter via MailChimp and Qualtrics</li>
         <li>Managed marketing strategies through social media platforms</li>
