--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Antuan Brown Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
   
 <div class="exp-header">
 <head>
@@ -20,7 +19,11 @@ img {
 </style>
 </head>
 <img src="https://media.licdn.com/dms/image/C4E03AQEjj51gZEUufg/profile-displayphoto-shrink_800_800/0/1617552089066?e=1678924800&amp;v=beta&amp;t=czxsLDik2SbQkvNmVdCmgqu8oamioqbw2RPVAMYEJUg">
-    <h2>Antuan D. L. Brown</h2>
+  </div>
+<body>
+  
+<div>  
+  <h2>Antuan D. L. Brown</h2>
   </div>
   
 <div>
