--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ protocols, and operations system specifications. Proficient in CRM platforms and
 <div class="exp-header">
   <h4>Technical Skills</h4>
   <p>Microsoft Office Suite (Excel, Outlook, PowerPoint, Teams, Word) │ Power BI │ G Suite │ Qualtrics │ EAB Navigate 
-    │ ThankView │ GrowthZone/ChamberMaster │ Constant Contact</p>
+    │ ThankView │ GrowthZone/ChamberMaster │ Constant Contact │ Beginner level in CSS/HTML</p>
    </div>
     
 <div class="exp-header">
