--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ img {
   </div>
   
 <div>
+  <p>Achiever | Focus | Learner | Positivity | Responsibility</p>
   <p>Ambitious information technology student currently completing CompTIA certifications and pursuing real-world 
 experience to develop acquired skills. Offering a strong understanding of device configuration, networking 
 protocols, and operations system specifications. Proficient in CRM platforms and eager to learn new processes, 
