--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img {
   </div>
   
 <div>
-  <p>Minneapolis, MN │ linkedin.com/in/antuan-brown</p>
+  <p>Minneapolis, MN │ https://www.linkedin.com/in/antuan-brown</p>
       </div>
 
 <div class="exp-header">
