--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@ Browsing Best Practices</li>
 <div class="exp-header">
   <h3>EDUCATION</h3>
     </div>
+  
+   <div>
+      <h4>Prime Digital Academy, Minneapolis, Minnesota</h4>
+      <ul>
+        <li>Full Stack Engineering, Expected Graduation October 2023</li>
+  </ul>
+        </div>
         
 <div>
       <h4>Takoda Institute of Higher Education, Minneapolis, Minnesota</h4>
