--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@ Browsing Best Practices</li>
         
 <div>
       <h4>Crookston Area Chamber, Crookston, Minnesota</h4>
-      <h4>Marketing Coordinator (Part-time)</h4>
+      <h4>Marketing Coordinator (Remote/Part-time)</h4>
       <h4>February 2020 – Present</h4>
       <ul>
         <li>Support the Executive Director of the Crookston Area Chamber</li>
         <li>Engage in membership retention efforts by assisting in business development and economic growth projects, leadership opportunities, and community engagement activities</li>
         <li>Oversee Chamber Management software (website/GrowthZone) and Constant Contact platforms to increase Chamber members retention by revamping engagement and marketing strategies</li>
-        <li>Track and report on email marketing campaign responses – up 2% in overall engagement</li>
-        <li>Overview to date: 58,454 sends – 17,919 opens (around 40% open rate) – 787 clicks</li>
+        <li>Track and report on email marketing campaign responses – up 3% in overall engagement</li>
+        <li>Overview to date: 61,838+ sends – 18,997+ opens (around 40% open rate) – 851+ clicks</li>
         <li>Create announcements and newsletter articles while performing website updates</li>
   </ul>
         </div>
